--- a/TelegramBot/app/src/App.css
+++ b/TelegramBot/app/src/App.css
@@ -1,92 +1,15 @@
-.App {
-  text-align: center;
+/* App.css */
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-table {
-  width: 100%;
-  margin: 20px auto;
-  border-collapse: collapse;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-table, th, td {
-  border: 1px solid #e0e0e0;
-  transition: all 0.3s ease;
-}
-
-th, td {
-  padding: 10px 15px;
-}
-
-th {
-  background-color: #a0c4ff;
-  color: #333;
-  text-align: left;
-  font-family: 'Arial', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-}
-
-td {
-  font-weight: bold;
-  color: #333;
-}
-
-caption {
-  font-size: 20px;
-  caption-side: top;
-  text-align: left;
-  padding-bottom: 10px;
-  font-weight: bold;
-  color: #333;
-}
-
-tr:nth-child(even) {
-  background-color: #fafafa;
-}
-
-tr:hover {
-  background-color: #f0f0f0;
-}
-
-th:hover {
-  background-color: #a3bffa;
-}
-
-tr:active {
-  background-color: #e7e7e7;
-}
-
-th:active {
-  background-color: #97b2ff;
-}
-
-td:hover {
-  background-color: #f5f5f5;
-}
-
-td:active {
-  background-color: #ebebeb;
-}
-
-/* Адаптивный стиль */
-@media (max-width: 600px) {
-  table {
-    display: block;
-    overflow-x: auto;
-  }
-
-  table th, table td {
-    display: block;
-    text-align: right;
-  }
-
-  table th::before, table td::before {
-    content: attr(data-label);
-    float: left;
-    font-weight: bold;
-  }
-
-  table th::before {
-    text-align: left;
-  }
-}
+/* Ваши дополнительные пользовательские стили */
